# rinha-backend-python

./: README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  worker.py
api/: cache.py  database.py  model.py  schema.py
docker/: nginx.conf
